@@ -536,6 +536,13 @@
 	"S_LOG_TIME_FORMAT"=>			"Log time format",
 	"S_CREATE_ITEM"=>			"Create Item",
 	"S_ADD_ITEM"=>				"Add Item",
+	"S_X_ELEMENTS_COPY_TO_DOT_DOT_DOT"=>	"elements copy to ...",
+	"S_MODE"=>				"Mode",
+	"S_TARGET"=>				"Target",
+	"S_TARGET_TYPE"=>			"Target type",
+	"S_SKIP_EXISTING_ITEMS"=>		"Skip existing items",
+	"S_UPDATE_EXISTING_NON_LINKED_ITEMS"=>	"update existing non linked items",
+	"S_COPY"=>				"Copy",
 
 //	events.php
 	"S_LATEST_EVENTS"=>			"Latest events",
