@@ -48,6 +48,9 @@
 		"add_groupid"=>	array(T_ZBX_INT, O_OPT,	 P_SYS,	DB_ID,'{register}=="go"'),
 		"action"=>	array(T_ZBX_STR, O_OPT,	 P_SYS,	NOT_EMPTY,'{register}=="go"'),
 
+		"copy_type"	=>array(T_ZBX_INT, O_OPT,	 P_SYS,	IN("0,1"),'isset({copy})'),
+		"copy_mode"	=>array(T_ZBX_INT, O_OPT,	 P_SYS,	IN("0"),NULL),
+
 		"itemid"=>	array(T_ZBX_INT, O_NO,	 P_SYS,	DB_ID,'{form}=="update"'),
 		"description"=>	array(T_ZBX_STR, O_OPT,  NULL,	NOT_EMPTY,'isset({save})'),
 		"key"=>		array(T_ZBX_STR, O_OPT,  NULL,  NOT_EMPTY,'isset({save})'),
@@ -77,6 +80,8 @@
 		"logtimefmt"=>	array(T_ZBX_STR, O_OPT,  NULL,  NULL,'isset({save})&&{value_type}==2'),
                  
 		"group_itemid"=>	array(T_ZBX_INT, O_OPT,	NULL,	DB_ID, NULL),
+		"copy_targetid"=>	array(T_ZBX_INT, O_OPT,	NULL,	DB_ID, NULL),
+		"filter_groupid"=>	array(T_ZBX_INT, O_OPT, P_SYS,	DB_ID, 'isset({copy})&&{copy_type}==0'),
 		"applications"=>	array(T_ZBX_INT, O_OPT,	NULL,	DB_ID, NULL),
 
 		"del_history"=>		array(T_ZBX_STR, O_OPT, P_SYS|P_ACT,	NULL,	NULL),
@@ -84,9 +89,11 @@
 		"register"=>		array(T_ZBX_STR, O_OPT, P_SYS|P_ACT,	NULL,	NULL),
 		"group_task"=>		array(T_ZBX_STR, O_OPT, P_SYS|P_ACT,	NULL,	NULL),
 		"save"=>		array(T_ZBX_STR, O_OPT, P_SYS|P_ACT,	NULL,	NULL),
+		"copy"=>		array(T_ZBX_STR, O_OPT, P_SYS|P_ACT,	NULL,	NULL),
 		"delete"=>		array(T_ZBX_STR, O_OPT, P_SYS|P_ACT,	NULL,	NULL),
 		"cancel"=>		array(T_ZBX_STR, O_OPT, P_SYS,	NULL,	NULL),
 		"form"=>		array(T_ZBX_STR, O_OPT, P_SYS,	NULL,	NULL),
+		"form_copy_to"=>	array(T_ZBX_STR, O_OPT, P_SYS,	NULL,	NULL),
 		"form_refresh"=>	array(T_ZBX_INT, O_OPT,	NULL,	NULL,	NULL)
 	);
 
@@ -157,6 +164,45 @@
 		}
 		show_messages($result, S_HISTORY_CLEANED, S_CANNOT_CLEAN_HISTORY);
 		
+	}
+	elseif(isset($_REQUEST["copy"])&&isset($_REQUEST["group_itemid"])&&isset($_REQUEST["form_copy_to"]))
+	{
+		if(isset($_REQUEST['copy_targetid']) && $_REQUEST['copy_targetid'] > 0 && isset($_REQUEST['copy_type']))
+		{
+			if(0 == $_REQUEST['copy_type'])
+			{ /* hosts */
+				$hosts_ids = $_REQUEST['copy_targetid'];
+			}
+			else
+			{ /* groups */
+				$hosts_ids = array();
+				$group_ids = "";
+				foreach($_REQUEST['copy_targetid'] as $group_id)
+				{
+					$group_ids .= $group_id.',';
+				}
+				$group_ids = trim($group_ids,',');
+
+				$db_hosts = DBselect('select distinct h.hostid from hosts h, hosts_groups hg'.
+					' where h.hostid=hg.hostid and hg.groupid in ('.$group_ids.')');
+				while($db_host = DBfetch($db_hosts))
+				{
+					array_push($hosts_ids, $db_host['hostid']);
+				}
+			}
+
+			foreach($_REQUEST["group_itemid"] as $item_id)
+				foreach($hosts_ids as $host_id)
+				{
+					copy_item_to_host($item_id, $host_id, true);
+				}
+			unset($_REQUEST["form_copy_to"]);
+		}
+		else
+		{
+			error('No target selection.');
+		}
+		show_messages();
 	}
 	elseif(isset($_REQUEST["register"]))
 	{
@@ -302,7 +348,11 @@
 	echo BR;
 
 	$db_hosts=DBselect("select hostid from hosts");
-	if(isset($_REQUEST["form"])&&isset($_REQUEST["hostid"])&&DBfetch($db_hosts))
+	if(isset($_REQUEST["form_copy_to"]) && isset($_REQUEST["group_itemid"]))
+	{
+		insert_copy_elements_to_forms("group_itemid");
+	}
+	elseif(isset($_REQUEST["form"])&&isset($_REQUEST["hostid"])&&DBfetch($db_hosts))
 	{
 // FORM
 		insert_item_form();
@@ -494,6 +544,7 @@
 		array_push($footerButtons, SPACE);
 		array_push($footerButtons, new CButton('group_task','Delete selected',
 			"return Confirm('".S_DELETE_SELECTED_ITEMS_Q."');"));
+		array_push($footerButtons, new CButton('form_copy_to','Copy selected to ...'));
 		$table->SetFooter(new CCol($footerButtons));
 
 		$form->AddItem($table);
